--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,13 @@ a{
   align-items: center;
   justify-content: center;
 }
+
+.btn img{
+  width:20px;
+  margin-left: 10px;
+}
+
+.btn.dark-btn{
+  background: #212EA0;
+  color: #FFF;
+}
